[project]
name = "Load"
authors = [{name = "Mark Servilla", email = "mark.servilla@gmail.com"}]
requires-python = ">=3.14"
version = "0.1.0"

[tool.pixi.workspace]
name = "Load"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
Load = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
aiohttp = ">=3.13.5,<4"
click = ">=8.4.0,<9"
python = ">=3.14.4,<3.15"
daiquiri = ">=3.0.0,<4"

[project.scripts]
load = "Load.load:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/Load"]

[tool.hatch.build.targets.sdist]
only-include = ["src/Load", "README.md"]